--- a/frontend_appsalud/android/gradle.properties
+++ b/frontend_appsalud/android/gradle.properties
@@ -1,3 +1,4 @@
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx1024m -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.daemon.idletimeout=60000
 android.useAndroidX=true
 android.enableJetifier=true
