--- a/frontend_appsalud/pubspec.yaml
+++ b/frontend_appsalud/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.6
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +26,6 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+
+assets:
+  -assets/json/secciones.json
